--- a/day-3/style.css
+++ b/day-3/style.css
@@ -31,6 +31,18 @@ h2 {
   font-size: 20px;
 }
 
+span {
+  animation: rainbow 5s linear infinite;
+}
+
+@keyframes rainbow {
+  0%   {color:red;}
+  25%  {color:yellow;}
+  50%  {color:blue;}
+  75%  {color:green;}
+  100% {color:red;}
+}
+
 button {
   font-family: 'Courier Prime', Courier, monospace;
   font-size: 1rem;
